--- a/alembic.ini
+++ b/alembic.ini
@@ -1,5 +1,6 @@
 [alembic]
-script_location = app/db/migrations
+script_location = app:db:migrations
+;script_location = app/db/migrations
 
 
 # Logging configuration
