--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -13,6 +13,11 @@ jobs:
     services:
       redis:
         image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - 6739:6379
 
