--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -7,7 +7,26 @@ on:
     branches: [ main, dev ]
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pip && \
+          python -m pip install pipenv
+      - name: Install dependencies
+        run: |
+          pipenv install --system --deploy --dev
+
   test:
+    needs: setup
     runs-on: ubuntu-latest
 
     services:
@@ -20,7 +39,6 @@ jobs:
           --health-retries 5
         ports:
           - 6379:6379
-
       postgres:
         image: postgres
         env:
@@ -36,27 +54,6 @@ jobs:
           - 5432:5432
 
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-
-      - name: Install pipenv
-        run: |
-          python -m pip install --upgrade pip && \
-          python -m pip install pipenv
-
-      - name: Install dependencies
-        run: |
-          pipenv install --system --deploy --dev
-
-      - name: Run lint
-        run: |
-          ./scripts/lint.sh
-
       - name: Run tests
         run: |
           pytest
@@ -64,3 +61,12 @@ jobs:
           APP_ENV: test
           DB_URL: postgresql://my_vocab_db_user:my_vocab_db_password@localhost:5432/my_vocab
           REDIS_URL: redis://localhost:6379/
+
+  lint:
+    needs: setup
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Run lint
+        run: |
+          ./scripts/lint.sh
