--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -1,4 +1,4 @@
-name: Testing / Type-checking / Linting
+name: Testing and Linting
 
 on:
   push:
@@ -7,26 +7,7 @@ on:
     branches: [main, dev]
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - name: Install pipenv
-        run: |
-          python -m pip install --upgrade pip && \
-          python -m pip install pipenv
-      - name: Install dependencies
-        run: |
-          pipenv install --system --deploy --dev
-
   test:
-    needs: setup
     runs-on: ubuntu-latest
 
     services:
@@ -54,6 +35,19 @@ jobs:
           - 5432:5432
 
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pip && \
+          python -m pip install pipenv
+      - name: Install dependencies
+        run: |
+          pipenv install --system --deploy --dev
       - name: Run tests
         run: |
           pytest
@@ -63,10 +57,22 @@ jobs:
           REDIS_URL: redis://localhost:6379/
 
   lint:
-    needs: setup
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pip && \
+          python -m pip install pipenv
+      - name: Install dependencies
+        run: |
+          pipenv install --system --deploy --dev
       - name: Run lint
         run: |
           ./scripts/lint.sh
