--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -41,6 +41,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pip wheel && \
+          python -m pip install pipenv
       - id: cache-pipenv
         uses: actions/cache@v3
         with:
@@ -68,6 +72,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pip wheel && \
+          python -m pip install pipenv
       - id: cache-pipenv
         uses: actions/cache@v3
         with:
