docs: update TG logging, delete extra blank lines

--- a/.env.example
+++ b/.env.example
@@ -37,16 +37,14 @@ ACCESS_TOKEN_EXPIRE_IN_SECONDS=  # default [test 6_000]
 REFRESH_TOKEN_EXPIRE_IN_SECONDS=  # default [test 60_000]
 VERIFICATION_CODE_EXPIRE_IN_SECONDS=  # default [test 6_000]
 
-
 # .env.prod / .env.dev
 LOGGING_LEVEL=  # default [prod/dev 'INFO']
-LOGGING_TG_TOKEN=
-LOGGING_TG_ADMINS=
-
+LOGGING_TG_USE=  # default [prod/dev True]
+LOGGING_TG_TOKEN=  # default [prod/dev '']
+LOGGING_TG_ADMINS=  # default [prod/dev []]
 
 # .env.prod
 GUNICORN_WORKERS_NUMBER=  # default 1
-
 
 # .env.dev
 UVICORN_RELOAD=  # default False
